--- a/config.json
+++ b/config.json
@@ -9,8 +9,8 @@
     "gh_url": "https://github.com/shivanisharma7397",
     "blog_name": "Spiritual Journey",
     "tag_line": "Spirituality is not a Religion, being spiritual just means you are in touch with your own divine self.",
-    "gmail-user":"shivani8225929443@gmail.com",
-    "gmail-password":"shivani.py@7397",
+    "gmail-user":"my email-id",
+    "gmail-password":"password",
     "about_text": "Hello my name is Shivani, I write blog posts on Meditation.",
     "no_of_posts": 2,
     "login_image" : "login.png",
